--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <!-- Paper video. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Video</h2>
+        <!-- <h2 class="title is-3">Video</h2> -->
         <div class="publication-video">
           <video controls playsinline width="100%">
             <source src="./static/videos/ProbeMDE_paper_video_presentation_HD.mp4"
