--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
             <span class="author-block"><sup>*</sup>These authors contributed equally.</span>
           </div>
 
-          <div class="column has-text-centered">
-            <div class="publication-links">
+          <!-- <div class="column has-text-centered">
+            <div class="publication-links"> -->
               <!-- PDF Link. -->
-              <span class="link-block">
+              <!-- <span class="link-block">
                 <a href="https://arxiv.org/pdf/2011.12948"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -143,9 +143,9 @@
                   </span>
                   <span>arXiv</span>
                 </a>
-              </span>
+              </span> -->
               <!-- Video Link. -->
-              <span class="link-block">
+              <!-- <span class="link-block">
                 <a href="https://www.youtube.com/watch?v=MrKrnHhk8IA"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -153,9 +153,9 @@
                   </span>
                   <span>Video</span>
                 </a>
-              </span>
+              </span> -->
               <!-- Code Link. -->
-              <span class="link-block">
+              <!-- <span class="link-block">
                 <a href="https://github.com/google/nerfies"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -163,17 +163,17 @@
                   </span>
                   <span>Code</span>
                   </a>
-              </span>
+              </span> -->
               <!-- Dataset Link. -->
-              <span class="link-block">
+              <!-- <span class="link-block">
                 <a href="https://github.com/google/nerfies/releases/tag/0.1"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
                   </span>
                   <span>Data</span>
-                  </a>
-            </div>
+                  </a> -->
+            <!-- </div> -->
 
           </div>
         </div>
@@ -402,11 +402,11 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{park2021nerfies,
-  author    = {Park, Keunhong and Sinha, Utkarsh and Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and Seitz, Steven M. and Martin-Brualla, Ricardo},
-  title     = {Nerfies: Deformable Neural Radiance Fields},
-  journal   = {ICCV},
-  year      = {2021},
+    <pre><code>@article{jordan2025probemde,
+  author    = {Jordan, Britton and Thompson, Jordan and d'Almeida, Jesse F. and Li, Hao and Kumar, Nithesh and Stern, Susheela Sharma and Oguz, Ipek and Webster III, Robert J. and Brown, Daniel and Kuntz, Alan and Ferguson, James},
+  title     = {ProbeMDE: Uncertainty-Guided Active Proprioception for Monocular Depth Estimation in Surgical Robotics},
+  journal   = {Preprint},
+  year      = {2025},
 }</code></pre>
   </div>
 </section>
